--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,4 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<!-- Navigation Bar with Partial View -->
+@Html.Partial("_NavBar")
+
 <p>Use this area to provide additional information. TJ</p>
