--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -4,6 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<!-- Navigation Bar with Partial View -->
+@Html.Partial("_NavBar")
+
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
