--- a/Views/Shared/_NavBar.cshtml
+++ b/Views/Shared/_NavBar.cshtml
@@ -14,6 +14,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Applicants", "ListOfApplicantsPageView", "Applicants")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
