• Add Personal Model

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         border-spacing: 20px;
     }
     .greenButton {
-        background-color: green;
+        background-color: #108238;
         color: white;
         width: 500px;
         padding-top: 20px;
@@ -18,9 +18,11 @@
         padding-right: 70px;
         padding-bottom: 20px;
         border-radius: 12px;
+        font-size: 21px;
+        text-align: center;
     }
     .blueButton {
-        background-color: blue;
+        background-color: #1A5BA0;
         color: white;
         width: 500px;
         padding-top: 20px;
@@ -28,6 +30,8 @@
         padding-right: 70px;
         padding-bottom: 20px;
         border-radius: 12px;
+        font-size: 21px;
+        text-align: center;
     }
 </style>
 
@@ -71,9 +75,6 @@
             </tr>
 
             
-
-
-
         </tbody>
         
 
