• Update DbContext and Database • Add Internal Styles as Partial View

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,37 +3,9 @@
 }
 
 
-<style>
 
-    #actionOptions {
-        border-collapse: separate;
-        border-spacing: 20px;
-    }
-    .greenButton {
-        background-color: #108238;
-        color: white;
-        width: 500px;
-        padding-top: 20px;
-        padding-left: 70px;
-        padding-right: 70px;
-        padding-bottom: 20px;
-        border-radius: 12px;
-        font-size: 21px;
-        text-align: center;
-    }
-    .blueButton {
-        background-color: #1A5BA0;
-        color: white;
-        width: 500px;
-        padding-top: 20px;
-        padding-left: 70px;
-        padding-right: 70px;
-        padding-bottom: 20px;
-        border-radius: 12px;
-        font-size: 21px;
-        text-align: center;
-    }
-</style>
+<!-- Internal CSS Styling -->
+@Html.Partial("_InternalStyle")
 
 <!-- Navigation Bar with Partial View -->
 @Html.Partial("_NavBar")
