--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -19,6 +19,7 @@
         border-radius: 12px;
         font-size: 21px;
         text-align: center;
+        box-shadow: 5px 100px;
     }
 
     .blueButton {
@@ -32,5 +33,10 @@
         border-radius: 12px;
         font-size: 21px;
         text-align: center;
+        box-shadow: 5px 100px;
+    }
+
+    .applicantDetails {
+        width: 700px;
     }
 </style>
