• Edits to ApplicantDetails View

--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -30,7 +30,7 @@
 
 <p>
     Add Personal Information
-
+    <!-- Link to: /Views/Personal/AddPersonalDetailsPageView/{applicantID} -->
 
 </p>
 
@@ -66,7 +66,7 @@
     AddPersonalPageView ================
 
     PAGE VIEW:
-    /Views/Personal/AddPersonalPageView/{applicantID}
+    /Views/Personal/AddPersonalDetailsPageView/{applicantID}
 
     FORM ACTION:
     - AUTOINCREMENT OCCURS FOR PersonalEntryID (Primary Key)
