--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -30,14 +30,19 @@
 
 <p>
     Add Personal Information
-    <!-- Link to: /Views/Personal/AddPersonalDetailsPageView/{applicantID} -->
+    <!-- Link to: /Views/Personals/AddPersonalDetailsPageView/{applicantID}
+        <a href="Views/Personals/AddPersonalDetailsPageView/@Model.ApplicantID">
 
+        -->
+    <a href="/Personals/AddPersonalsPageView/@Model.ApplicantID">HERE</a>
 </p>
 
 
 <!--
 
     Add Personals using ApplicantID
+
+    using model ->"at" RésuméBuilder.Models.Applicant
 
     In relevant Controller:
     public ActionResult AddPersonalActionForm(Personal personalRecord)
@@ -66,7 +71,8 @@
     AddPersonalPageView ================
 
     PAGE VIEW:
-    /Views/Personal/AddPersonalDetailsPageView/{applicantID}
+    [ATTRIBUTE ROUTING REQUIRED IN CONTROLLER METHOD]
+    /Views/Personals/AddPersonalDetailsPageView/{applicantID}
 
     FORM ACTION:
     - AUTOINCREMENT OCCURS FOR PersonalEntryID (Primary Key)
