--- a/Views/Personals/AddPersonalsPageView.cshtml
+++ b/Views/Personals/AddPersonalsPageView.cshtml
@@ -60,6 +60,13 @@
     </div>
     <br />
 
+    <!-- Middle Name -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.MiddleName)
+        @Html.TextBoxFor(p => p.MiddleName, new { @class = "form-control" })
+    </div>
+    <br />
+
     <!-- Last Name -->
     <div class="form-group">
         @Html.LabelFor(p => p.LastName)
@@ -67,11 +74,61 @@
     </div>
     <br />
 
+    <!-- Street Name -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.StreetLocation)
+        @Html.TextBoxFor(p => p.StreetLocation, new { @class = "form-control" })
+    </div>
+    <br />
 
+    <!-- Area Name -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.AreaLocation)
+        @Html.TextBoxFor(p => p.AreaLocation, new { @class = "form-control" })
+    </div>
+    <br />
 
+    <!-- Region Name -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.RegionLocation)
+        @Html.TextBoxFor(p => p.RegionLocation, new { @class = "form-control" })
+    </div>
+    <br />
 
+    <!-- Mobile Number -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.PhoneMobile)
+        @Html.TextBoxFor(p => p.PhoneMobile, new { @class = "form-control" })
+    </div>
+    <br />
 
+    <!-- Home Number -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.PhoneHome)
+        @Html.TextBoxFor(p => p.PhoneHome, new { @class = "form-control" })
+    </div>
+    <br />
 
+    <!-- Work Number -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.PhoneWork)
+        @Html.TextBoxFor(p => p.PhoneWork, new { @class = "form-control" })
+    </div>
+    <br />
+
+    <!-- Home Email -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.EmailHome)
+        @Html.TextBoxFor(p => p.EmailHome, new { @class = "form-control" })
+    </div>
+    <br />
+
+    <!-- Work Email -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.EmailWork)
+        @Html.TextBoxFor(p => p.EmailWork, new { @class = "form-control" })
+    </div>
+    <br />
 
 
 
