--- a/Views/Personals/PersonalDetailsSuccess.cshtml
+++ b/Views/Personals/PersonalDetailsSuccess.cshtml
@@ -4,7 +4,7 @@
     var appid = ViewBag.ApplicantID;
 }
 
-<h2>PersonalDetailsSuccess</h2>
+<h2>Personal Details Success</h2>
 
 
 <p>Success! You have successfully entered your Personal Details</p>
@@ -16,5 +16,5 @@
 
     <!-- ActionLink Syntax: Link_Name, View_Name, View_Folder -->
     <!-- Goes to: Views/Applicants/ListOfApplicantsPageView -->
-    <a href="/Applicants/ApplicantDetails/@appid">[DETAILS]</a>
+    <a href="/Applicants/ApplicantDetails/@appid">[HERE]</a>
 </p>
