--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -9,6 +9,20 @@
         background-color: whitesmoke;
     }
 
+    hr {
+        color: gold;
+    }
+
+    .personal {
+        color: #708090;
+    }
+
+    #personal_table {
+        width: 1000px;
+        text-align: left;
+        vertical-align: text-top;
+    }
+
 
 </style>
 
