--- a/Views/Applicants/ResumeVM.cshtml
+++ b/Views/Applicants/ResumeVM.cshtml
@@ -11,8 +11,12 @@
 
 <h2>Résumé</h2>
 
-<p>@Model.ApplicantRecordVM.ApplicantID</p>
-<p>@Model.ApplicantRecordVM.ApplicantUsername</p>
+<div hidden>
+
+    <p>@Model.ApplicantRecordVM.ApplicantID</p>
+    <p>@Model.ApplicantRecordVM.ApplicantUsername</p>
+
+</div>
 
 
 
