--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -11,6 +11,8 @@
 
     hr {
         color: gold;
+        background: gold;
+        height: 2px;
     }
 
     .personal {
@@ -18,7 +20,7 @@
     }
 
     #personal_table {
-        width: 1000px;
+        width: 900px;
         text-align: left;
         vertical-align: text-top;
     }
