--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -15,6 +15,10 @@
         height: 2px;
     }
 
+    #mainTitle{
+        font-size: 40px;
+    }
+
     .personal {
         color: #708090;
     }
