• Update SkillsController to improve FormAction

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
     <table id="actionOptions" cellspacing="50">
 
-        <tbody >
+        <tbody>
 
             <tr>
 
@@ -29,7 +29,7 @@
                         <input class="greenButton" type="submit" value="Register" />
                     </form>
 
-                </td>        
+                </td>
 
             </tr>
 
@@ -46,15 +46,19 @@
 
             </tr>
 
-            
+
         </tbody>
-        
+
 
 
 
     </table>
 
-    
+
 
 
 </div>
+
+
+
+@Html.Partial("_ContactPopUp")
