--- a/Views/Personals/AddPersonalsPageView.cshtml
+++ b/Views/Personals/AddPersonalsPageView.cshtml
@@ -136,8 +136,8 @@
 
 
 
+    <!-- FORM DATA SUBMISSION -->
 
-
-    <input type="submit" class="btn btn-primary" value="Add Personal">
+    <input type="submit" class="btn btn-primary" value="Add Personal Record">
 
 }
