--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -14,6 +14,7 @@
 
 <h2>Applicant Details for @Model.ApplicantUsername</h2>
 
+<br />
 
 <table class="applicantDetails" cellspacing="70">
     <thead>
@@ -26,34 +27,48 @@
 
 <br />
 
+<h3>Résumé Built</h3>
 
-<p>
-    VIEW FULL RESUME (VIEW MODEL)
+<div>
 
-    @Html.ActionLink("[HERE!]", "ResumeVM", new { applicantID = id })
+    <!-- VIEW FULL RESUME USING VIEW MODEL -->
+    <p>
+        VIEW FULL RÉSUMÉ
 
-</p>
+        @Html.ActionLink("[HERE!]", "ResumeVM", new { applicantID = id })
+
+    </p>
+
+</div>
+
+<br />
+<br />
+
+<h3>Add Your Outstanding Details</h3>
+
+<div>
+
+    <p>
+        Add Personal Information
+        <!-- Link to: /Views/Personals/AddPersonalDetailsPageView/{applicantID}
+            <a href="Views/Personals/AddPersonalDetailsPageView/@Model.ApplicantID">
+
+            -->
+        <a href="/Personals/AddPersonalsPageView/@Model.ApplicantID">HERE</a>
+    </p>
 
 
+    <p>
+        Add Skill Information
+        <!-- Link to: /Views/Personals/AddPersonalDetailsPageView/{applicantID}
+            <a href="Views/Personals/AddPersonalDetailsPageView/@Model.ApplicantID">
+
+            -->
+        <a href="/Skills/AddSkillsPageView/@Model.ApplicantID">HERE</a>
+    </p>
 
 
-
-
-<p>
-    Add Personal Information
-    <!-- Link to: /Views/Personals/AddPersonalDetailsPageView/{applicantID}
-        <a href="Views/Personals/AddPersonalDetailsPageView/@Model.ApplicantID">
-
-        -->
-    <a href="/Personals/AddPersonalsPageView/@Model.ApplicantID">HERE</a>
-</p>
-
-
-
-
-
-
-
+</div>
 
 
 
