• Enable the ability to dynamically add multiple Skill Rows

--- a/Views/Shared/_AddSkillRow.cshtml
+++ b/Views/Shared/_AddSkillRow.cshtml
@@ -1,1 +1,16 @@
-﻿<!-- SKILL ROW -->
+﻿<!-- DYNAMICALLY ADD SKILL ROW -->
+<!-- https://stackoverflow.com/questions/44972220/appending-a-div-onclick -->
+
+<script src="https://code.jquery.com/jquery-2.2.3.min.js"
+        integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+        crossorigin="anonymous">
+
+
+
+
+</script>
+
+
+<button class="appendbtn" type="button">Click to append</button>
+
+
