--- a/Views/Shared/_AddSkillRow.cshtml
+++ b/Views/Shared/_AddSkillRow.cshtml
@@ -6,11 +6,29 @@
         crossorigin="anonymous">
 
 
+     
+</script>
 
+<script>
 
+    
+    
 </script>
 
 
-<button class="appendbtn" type="button">Click to append</button>
+<table>
+
+    <tbody>
+
+        <tr>
+            <td><button class="appendbtn" type="button">Click to add Skill</button></td>
+            <td><button class="removebtn" type="button">Click to remove Skill</button></td>
+        </tr>
+
+    </tbody>
+
+</table>
+
+
 
 
