--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -14,9 +14,22 @@
         background: gold;
         height: 2px;
     }
+    h2 {
+        font-size: 35px;
+        font-weight: bolder;
+    }
+
+    h3 {
+        color: #708090;
+        padding-bottom: 20px;
+    }
+
+    h4 {
+        color: #4682B4;
+    }
 
     #mainTitle{
-        font-size: 40px;
+        font-size: 44px;
     }
 
     .personal {
@@ -27,6 +40,21 @@
         width: 900px;
         text-align: left;
         vertical-align: text-top;
+    }
+
+    .skill {
+        color: #4682B4;
+        list-style-type: square;
+        list-style-position: outside;
+        text-align: left;
+        line-height: 1.0px;
+        width: 490px;
+        padding-top: 1px;
+        padding-left: 35px;
+        padding-right: 70px;
+        padding-bottom: 5px;
+        font-size: 21px;
+        word-wrap: normal;
     }
 
 
